# article-sample-src

./: .pre-commit-config.yaml  CODING_STANDARDS.md  README.md  docker-compose.yaml
backend/: .pre-commit-config.yaml  manage.py  pyproject.toml
backend/api/: admin.py  apps.py  urls.py
backend/api/endpoints/todos/: serializers.py  services.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/models/: __init__.py  todo.py
backend/api/tests/: conftest.py
backend/api/tests/fixtures/: snapshot_helpers.py
backend/api/tests/integration/: test_api.py
backend/api/tests/snapshot/: README.md  test_todos.py
backend/api/tests/unit/: test_models.py  test_serializers.py  test_services.py
backend/config/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
frontend/: biome.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/services/: TodoService.ts
frontend/src/types/: index.ts
frontend/tests/setup/: setupTests.ts
frontend/tests/unit/components/: TodoForm.test.tsx  TodoItem.test.tsx  TodoList.test.tsx
frontend/tests/unit/services/: TodoService.test.ts
